# rusty-initramfs-builder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md  integration.md
src/: error.rs  lib.rs  main.rs
src/image/: layer.rs  mod.rs  rootfs.rs
src/initramfs/: compress.rs  cpio.rs  mod.rs
src/registry/: client.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/screens/: arch.rs  compress.rs  image.rs  init.rs  inject.rs  language.rs  mod.rs  summary.rs
tests/: integration_test.rs
tests/agent/: main.rs
